:active disabled for buttons to avoid bugs on mobile

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -27,11 +27,11 @@
     box-shadow: 3px 3px 10px 3px rgb(185, 185, 185);
     margin: 2% 45%;
     text-align: center;
-    &:active {
+   /*  &:active {
         background-color: $light;
         color: $grey;
         border: 2px solid $grey;
-    }
+    } */
 }
 
 .bg-menu {
